# iced-experiments

./: LICENSE  README.md
currency/: Cargo.toml  README.md
currency/src/: data.rs  main.rs
iced-calc/: Cargo.toml  README.md
iced-calc/src/: main.rs
layers/: Cargo.toml  README.md
layers/src/: element_wrapper.rs  layer.rs  layer_manager.rs  main.rs  overlay_manager.rs
legion/: Cargo.toml  README.md
legion/src/: agency.rs  main.rs
legion/src/ui/: agent_details.rs  agent_list.rs  mod.rs  order_list.rs
legion/src/ui/order_setup/: mod.rs  travel_setup.rs
legion/src/world/: components.rs  mod.rs  spawner.rs
legion/src/world/systems/: mod.rs  orders.rs
src/: main.rs
svg-map/: Cargo.toml  README.md
svg-map/src/: absolute_container.rs  main.rs  map.rs  map_point.rs  overlay_manager.rs
todo-list/: Cargo.toml  README.md
todo-list/src/: main.rs
weather-here/: Cargo.toml  README.md
weather-here/src/: data.rs  main.rs  style.rs
