[package]
name = "currency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.9.0", features = ["tokio"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["time"] }
