[package]
name = "weather-here"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.9.0", features = ["tokio"] }
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde_json = "1.0.99"
tokio = { version = "1.29.1", features = ["time"] }
